--- a/package.json
+++ b/package.json
@@ -2,15 +2,18 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "web.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "json-server --watch response.json"
+    "start": "json-server --watch response.json --port 8001"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "json-server": "^0.16.3"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
