--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "web.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "json-server --watch response.json --port 8001"
+    "start": "json-server --watch response.json"
   },
   "keywords": [],
   "author": "",
